--- a/index.html
+++ b/index.html
@@ -182,6 +182,9 @@
             <a href="#contact" class="text-white hover:text-accent font-medium"
               >Contact</a
             >
+            <a href="privacy.html" class="text-white hover:text-accent font-medium"
+              >Privacy</a
+            >
           </div>
         </div>
       </div>
@@ -207,6 +210,11 @@
             href="#contact"
             class="block px-3 py-2 rounded-md text-white hover:text-accent font-medium"
             >Contact</a
+          >
+          <a
+            href="privacy.html"
+            class="block px-3 py-2 rounded-md text-white hover:text-accent font-medium"
+            >Privacy</a
           >
         </div>
       </div>
@@ -648,7 +656,7 @@
         <div
           class="border-t border-gray-700 mt-8 pt-8 text-center text-gray-400"
         >
-          <p>&copy; 2025 Catch Casey. All rights reserved.</p>
+          <p>&copy; 2025 Catch Casey. All rights reserved. | <a href="privacy.html" class="text-accent hover:text-accent-lighter">Privacy Policy</a></p>
         </div>
       </div>
     </footer>
